# jidhr-arabic-vocab-tracker

./: .gitignore  Cargo.toml  README.md
chrome-extension/: .gitignore  content.js  manifest.json  package.json  pnpm-lock.yaml  popup.html  styles.css
chrome-extension/chrome-extension/: manifest.ts
chrome-extension/chrome-extension/public/: content.css
chrome-extension/chrome-extension/src/background/: index.ts
chrome-extension/pages/content/: README.md
chrome-extension/pages/content/src/: arabicLemmatizer.tsx  index.ts
chrome-extension/pages/content/src/components/: HighlightedWord.tsx  Toast.tsx  Tooltip.tsx
chrome-extension/pages/content/src/context/: LemmatizerContext.tsx
chrome-extension/pages/content/src/utils/: apiUtils.ts
chrome-extension/pages/options/src/: Options.tsx
chrome-extension/pages/popup/: index.html
chrome-extension/pages/popup/src/: Popup.css  Popup.tsx  index.css
chrome-extension/tests/e2e/specs/: page-content-runtime.test.ts  page-content-ui.test.ts
examples/: README.md  example.html  postman_collection.json
migrations/: 20240321000000_create_lemmas_table.sql
server/: .gitignore  Cargo.toml  README.md  postman_collection.json
server/migrations/: 20240320000000_initial.sql
server/src/: lemmatizer.rs  main.rs
src/: lemmatizer.rs  main.rs
