[package]
name = "jidhr-vocab-server"
version = "0.1.0"
edition = "2021"
description = "Jidhr.com - Arabic Vocabulary Tracker with lemmatization support"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "chrono"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.82"
chrono = "0.4.41"
